<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_marginTop="89dp"
        android:gravity="bottom"
        android:text="@string/username"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:gravity="bottom"
        android:text="@string/password"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_username"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_marginBottom="74dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_username"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_marginBottom="299dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_username"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/b_Login"
        android:layout_width="164dp"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:onClick="login"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <Button
        android:id="@+id/b_SignUp"
        android:layout_width="164dp"
        android:layout_height="56dp"
        android:onClick="signUp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_Login" />

    <TextView
        android:id="@+id/textView_Register"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/b_SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_Login"
        tools:text="Don't you have an account ?" />

</androidx.constraintlayout.widget.ConstraintLayout>