<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".SignUpActivity">


    <ScrollView
        android:id="@+id/scrollViewSignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="false">

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="317dp"
                android:layout_height="38dp"
                android:layout_marginTop="50dp"
                android:gravity="bottom"
                android:text="@string/name"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="317dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_name"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView_username2"
                android:layout_width="317dp"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:text="@string/username"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_name" />

            <EditText
                android:id="@+id/editText_username2"
                android:layout_width="317dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_username2"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView_email"
                android:layout_width="317dp"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:text="@string/email"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_username2" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="317dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_email"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView_password2"
                android:layout_width="317dp"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:text="@string/password"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_email" />

            <EditText
                android:id="@+id/editText_password2"
                android:layout_width="317dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_password2"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView_confirmPassword"
                android:layout_width="317dp"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:text="@string/confirmPassword"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_password2" />

            <EditText
                android:id="@+id/editText_confirmPassword"
                android:layout_width="317dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_confirmPassword"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/b_signUp2"
                android:layout_width="191dp"
                android:layout_height="49dp"
                android:layout_marginTop="40dp"
                android:onClick="save"
                android:text="SAVE"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_confirmPassword" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>